feat: Add ontology enrichment and semantic similarity analysis pipeline
- Added  for age/sex-controlled ontology enrichment (PAMT/MA/MPATH) using func.
- Added semantic similarity analysis scripts:
  - : Strain-level weighted cosine similarity.
  - : Mouse-level PCA/t-SNE.
  - : Exploratory plots and stats.
- Added  for data prep.
- Updated README.md with detailed methodology and usage instructions.